2002-06-15  wakaba <w@suika.fam.cx>

	* AngleQuoted.pm: New module.
	* Mailbox.pm, URI.pm: Use AngleQuoted.pm

2002-06-09  wakaba <w@suika.fam.cx>

	* Addresses.pm (_delete_match): 'addr-spec': new 'by' option.
	* ContentType.pm:
	- (_save_param): Call _parse_param_value if parse_all.
	- (_parse_value): New function.  Check Message::MIME::MediaType.
	* CSV.pm (use_comment): New option.
	* Date.pm:
	- (zone): New method.
	- (set_datetime): Likewise.
	* Mailbox.pm (display_name): New method.
	* Numval.pm (use_comment): New option.
	* Param.pm (_parse_param_value): New function.
	* Structured.pm:
	- (_add_return_value, _replace_return_value): New functions.
	- (_parse_value): Sync with Message::Entity's.
	- (option): Sync with Message::Entity's.
	- (option): '-recursive': new option.
	- (_option_recursive): New function.

2002-05-17  wakaba <w@suika.fam.cx>

	* Mailbox.pm: Bug fix and minor changes.
	* URI.pm: Remade.  It is now designed by M::F::Mailbox
	like interface.

2002-05-16  wakaba <w@suika.fam.cx>

	* Date.pm: Remade.

2002-05-15  wakaba <w@suika.fam.cx>

	* Address.pm: Removed.
	* Domain.pm: Bug fix (doesn't treat four-sub-domain-
	domain as (invalid) IPv4 address).
	* Mailbox.pm (addr_spec): New method.
	* Addresses.pm (addr_spec): Likewise.
	
	* Structured.pm (option): Doesn't treat ( "-" option-name )
	as an alias of option-name.  (A ( "-" option-name ) should
	be recognized as an option for 'option' method.)

2002-05-14  wakaba <w@suika.fam.cx>

	* Addresses.pm, Mailbox.pm, Domain.pm
	(sons-of-Address.pm): New modules.
	* Structured.pm:
	- (method_available): New method.
	- (clone): Checks _MEMBERS option.
	- (comment_add, comment_count, comment_delete, comment_item):
	New methods.
	- (item): Implemented.
	- (_delete_empty): Commentout default action.
	- (add, replace): Fix bug (parse option didn't work).
	* MsgID.pm: Don't use non-(ALPHA / DIGIT) as the first
	character of id-left.
	* Date.pm: Understands month name "Sept".
