@@ -1,3 +1,9 @@
+2002-06-16  wakaba <w@suika.fam.cx>
+
+	* MsgID.pm: Check '.test' reserved TLD if '-validate'.
+	* UA.pm (add_our_name): New method (moved from 
+	Message::Entity).
+
 2002-06-15  wakaba <w@suika.fam.cx>
 
 	* AngleQuoted.pm: New module.
